Got rid of unnecessary css (duplicate IDs, etc). \n Fixed some layout problems (width of document was larger than viewport[body width set too large], responsive topnav, html problems with missing end tags (img endtag not necessary but there were missing div tags, etc). Some problematic css also changed, document body set to overflow: auto so that document is scrollable on viewports that are too small for content to fit on entire screen.)))

--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -5,19 +5,18 @@ html > body{
 }
 
 body {
-
 	font-family: 'Montserrat', sans-serif;
-	color:white;
+	font-size: 14px;
+	color: #fff;
 	background-color: #282C30;
-	width: 100vw;
-	overflow: hidden;
+	overflow: auto;
 	background-image: url('/images/stardust.png');
 }
 #wrapper {
 	font-family: 'Montserrat', sans-serif;
-	background-color: #282C30;
+	/*background-color: #282C30;*/
+	margin: 0 2%;
 	background-image: url('/images/stardust.png');
-	
 }
 
 
@@ -39,16 +38,19 @@ footer > a{
 }
 
 
-#topBar{
-
+#topBar {
 	font-size: 6em;
-	height:200px;
-	
+	text-align: center;
+	height: 150px;
 	background-color: #282C30;
 }
 #topBar > p {
-	padding: 20px;
-	margin-top: 20px;
+/*	padding: 20px;
+	margin-top: 20px;*/
+}
+
+#body-text {
+	margin-top: 40px;
 }
 
 #bottomMenu, #bottomMenu > img{
@@ -65,12 +67,29 @@ footer > a{
 
 	margin-top: 10%;
 }
-@media only screen and (max-width : 979px) {
+#content {
+	text-align: center;
+}
 
+
+@media only screen and (max-width : 979px) {
+	#topBar {
+		font-size: 5em;
+	}
+}
+@media only screen and (max-width : 768px) {
+	#topBar {
+		font-size: 4em;
+	}
+}
+@media only screen and (max-width : 450px) {
+	#topBar {
+		font-size: 3em;
+	}
 }
 
 /**/
-.contain{
+.contain {
 	top:50%;
 	left:50%;
 	height:54px;
@@ -79,6 +98,7 @@ footer > a{
 	border-radius:40%;
 	padding:2px;
 	background-color: #DF4949;
+	margin: 7px 0;
 }
 .anim{
 	-webkit-animation: myfirst 3s linear infinite;
